
FIND_PACKAGE (RBDL)
FIND_PACKAGE (NLOPT)

if (Simox_USE_RBDL_LIB)
    ADD_SUBDIRECTORY(InverseDynamics)
endif ()

if (NLOPT_FOUND)
    ADD_SUBDIRECTORY(ConstrainedIK)
endif ()

ADD_SUBDIRECTORY(loadRobot)

ADD_SUBDIRECTORY(CameraViewer)
ADD_SUBDIRECTORY(GenericIK)
ADD_SUBDIRECTORY(GraspEditor)
ADD_SUBDIRECTORY(Jacobi)
ADD_SUBDIRECTORY(loadURDFRobot)
ADD_SUBDIRECTORY(MujocoMeshReader)
ADD_SUBDIRECTORY(reachability)
ADD_SUBDIRECTORY(ReachabilityMap)
ADD_SUBDIRECTORY(RobotViewer)
ADD_SUBDIRECTORY(RobotViewerOSG)
ADD_SUBDIRECTORY(SceneViewer)
ADD_SUBDIRECTORY(Simox2Mjcf)
ADD_SUBDIRECTORY(stability)
ADD_SUBDIRECTORY(CoinViewer)
ADD_SUBDIRECTORY(RGBOffscreenRendering)
ADD_SUBDIRECTORY(DepthOffscreenRendering)
ADD_SUBDIRECTORY(RobotFromObjects)
ADD_SUBDIRECTORY(Iv2Wrl)
ADD_SUBDIRECTORY(HemisphereJoint)
ADD_SUBDIRECTORY(TestObjLoading)
