[tool.poetry]
name = "hemisphere-joint-demo"
version = "0.1.0"
description = ""
authors = ["Rainer Kartmann <rainer dot kartmann at kit dot edu>"]

[tool.poetry.dependencies]
python = "^3.6"
# armarx-dev = { path = "../../../armarx/python3-armarx/", develop=true} # "^0.16.4"
zeroc-ice = "3.7.0"
numpy = "^1.19.5"
jupyter = "^1.0.0"
plotly = "*"
matplotlib = "*"
scipy = "*"
sympy = "*"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "5.5"

[build-system]
requires = ["poetry-core@https://github.com/python-poetry/poetry-core/archive/325312c016d69189ac93c945ba0c1b69296c5e54.zip"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "h2t"
url = "https://pypi.humanoids.kit.edu/simple/"

